force-app/main/default/objects/Partner_Application__c/Partner_Application__c.object-meta.xml
<CustomObject>
    <description>This object is the central staging record for the entire due diligence process.</description>
    <label>Partner Application</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Partner Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>