force-app/main/default/objects/Partner_Application__c/fields/Admin_Proceeding__c.field-meta.xml
<CustomField>
    <fullName>Admin_Proceeding__c</fullName>
    <label>Administrative Proceeding / Civil Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>