force-app/main/default/objects/Partner_Application__c/fields/Admin_Proceeding_Details__c.field-meta.xml
<CustomField>
    <fullName>Admin_Proceeding_Details__c</fullName>
    <label>Administrative Proceeding Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>