force-app/main/default/objects/Partner_Application__c/fields/Application_Link__c.field-meta.xml
<CustomField>
    <fullName>Application_Link__c</fullName>
    <formula>IF(
    ISBLANK(Token__c), 
    null, 
    $Label.Referral_Site_Base_URL &amp; &quot;?token=&quot; &amp; Token__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Link</label>
    <type>Text</type>
</CustomField>