force-app/main/default/objects/Partner_Application__c/fields/Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Approval_Stage__c</fullName>
    <label>Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending with Legal</fullName>
            </value>
            <value>
                <fullName>Pending with Finance</fullName>
            </value>
            <value>
                <fullName>Pending with Sales</fullName>
            </value>
            <value>
                <fullName>Pending with Exec</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>