force-app/main/default/objects/Partner_Application__c/fields/Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy__c</fullName>
    <label>Bankruptcy History</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>