force-app/main/default/objects/Partner_Application__c/fields/Bankruptcy_Details__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Details__c</fullName>
    <label>Bankruptcy History Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>