force-app/main/default/objects/Partner_Application__c/fields/Cert_13_1__c.field-meta.xml
<CustomField>
    <fullName>Cert_13_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certification 13.1:Independent Referral</label>
    <type>Checkbox</type>
</CustomField>