force-app/main/default/objects/Partner_Application__c/fields/Cert_13_2__c.field-meta.xml
<CustomField>
    <fullName>Cert_13_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certification 13.2:Non-Collusion:</label>
    <type>Checkbox</type>
</CustomField>