force-app/main/default/objects/Partner_Application__c/fields/Cert_13_3__c.field-meta.xml
<CustomField>
    <fullName>Cert_13_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certification 13.3:OFAC Compliance</label>
    <type>Checkbox</type>
</CustomField>