force-app/main/default/objects/Partner_Application__c/fields/Cert_13_3_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Cert_13_3_Signatory__c</fullName>
    <label>Signatory Initials:OFAC Compliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>