force-app/main/default/objects/Partner_Application__c/fields/Competitor_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Engagement__c</fullName>
    <label>Competitor Engagement (2 years)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>