force-app/main/default/objects/Partner_Application__c/fields/Competitor_Engagement_Details__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Engagement_Details__c</fullName>
    <label>Competitor Engagement Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>