force-app/main/default/objects/Partner_Application__c/fields/Contract_Default_Details__c.field-meta.xml
<CustomField>
    <fullName>Contract_Default_Details__c</fullName>
    <label>Contract Default Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>