force-app/main/default/objects/Partner_Application__c/fields/Conviction_Details__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Details__c</fullName>
    <label>Conviction Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>