force-app/main/default/objects/Partner_Application__c/fields/Criminal_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Investigation__c</fullName>
    <label>Criminal Investigation / Indictment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>