force-app/main/default/objects/Partner_Application__c/fields/Criminal_Investigation_Details__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Investigation_Details__c</fullName>
    <label>Criminal Investigation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>