force-app/main/default/objects/Partner_Application__c/fields/DBA_Trade_Names__c.field-meta.xml
<CustomField>
    <fullName>DBA_Trade_Names__c</fullName>
    <label>Trade names or doing business as (DBA)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>