force-app/main/default/objects/Partner_Application__c/fields/Environmental_Order__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Order__c</fullName>
    <label>Environmental Consent Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>