force-app/main/default/objects/Partner_Application__c/fields/Environmental_Order_Details__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Order_Details__c</fullName>
    <label>Environmental Order Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>