force-app/main/default/objects/Partner_Application__c/fields/Final_Signature__c.field-meta.xml
<CustomField>
    <fullName>Final_Signature__c</fullName>
    <label>Final Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>