force-app/main/default/objects/Partner_Application__c/fields/Govt_Funding_Details__c.field-meta.xml
<CustomField>
    <fullName>Govt_Funding_Details__c</fullName>
    <label>Government Project Funding Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>