force-app/main/default/objects/Partner_Application__c/fields/Govt_Ownership_Details__c.field-meta.xml
<CustomField>
    <fullName>Govt_Ownership_Details__c</fullName>
    <label>Government Ownership Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>