force-app/main/default/objects/Partner_Application__c/fields/Govt_Violation_Details__c.field-meta.xml
<CustomField>
    <fullName>Govt_Violation_Details__c</fullName>
    <label>Government Law Violation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>