force-app/main/default/objects/Partner_Application__c/fields/How_long_should_this_link_stay_active__c.field-meta.xml
<CustomField>
    <fullName>How_long_should_this_link_stay_active__c</fullName>
    <label>How long should this link stay active?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24 Hours,</fullName>
            </value>
            <value>
                <fullName>48 Hours,</fullName>
            </value>
            <value>
                <fullName>3 days (72 Hours),</fullName>
            </value>
            <value>
                <fullName>4 days(96 Hours),</fullName>
            </value>
            <value>
                <fullName>5 days(120 Hours)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>