force-app/main/default/objects/Partner_Application__c/fields/Labor_Violation__c.field-meta.xml
<CustomField>
    <fullName>Labor_Violation__c</fullName>
    <label>Willful Labor Law Violation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>