force-app/main/default/objects/Partner_Application__c/fields/Labor_Violation_Details__c.field-meta.xml
<CustomField>
    <fullName>Labor_Violation_Details__c</fullName>
    <label>Labor Violation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>