force-app/main/default/objects/Partner_Application__c/fields/License_Revocation_Details__c.field-meta.xml
<CustomField>
    <fullName>License_Revocation_Details__c</fullName>
    <label>License Revocation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>