force-app/main/default/objects/Partner_Application__c/fields/Litigation_Details__c.field-meta.xml
<CustomField>
    <fullName>Litigation_Details__c</fullName>
    <label>Pending Litigation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>