force-app/main/default/objects/Partner_Application__c/fields/Partner_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact_Email__c</fullName>
    <label>Partner Contact Email</label>
    <type>Email</type>
</CustomField>