force-app/main/default/objects/Partner_Application__c/fields/Partner_Leaders__c.field-meta.xml
<CustomField>
    <fullName>Partner_Leaders__c</fullName>
    <description>Directors, Officers, Partners, Shareholders</description>
    <label>Referral Partner Leaders</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>