force-app/main/default/objects/Partner_Application__c/fields/Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address__c</fullName>
    <label>Primary Address</label>
    <type>TextArea</type>
</CustomField>