force-app/main/default/objects/Partner_Application__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Applications</relationshipLabel>
    <relationshipName>Partner_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>