force-app/main/default/objects/Partner_Application__c/fields/Related_Entities__c.field-meta.xml
<CustomField>
    <fullName>Related_Entities__c</fullName>
    <description>Affiliates, Subsidiaries, Related Entities</description>
    <label>Related Entities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>