force-app/main/default/objects/Partner_Application__c/fields/Security_Finance_Details__c.field-meta.xml
<CustomField>
    <fullName>Security_Finance_Details__c</fullName>
    <label>Security / Finance Violation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>