force-app/main/default/objects/Partner_Application__c/fields/Signatory_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Legal_Entity__c</fullName>
    <label>Signatory Legal Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>