force-app/main/default/objects/Partner_Application__c/fields/States_Qualified__c.field-meta.xml
<CustomField>
    <fullName>States_Qualified__c</fullName>
    <label>States Qualified to Conduct Business</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>