force-app/main/default/objects/Partner_Application__c/fields/Surety_Completion__c.field-meta.xml
<CustomField>
    <fullName>Surety_Completion__c</fullName>
    <label>Called Upon by Surety</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>