force-app/main/default/objects/Partner_Application__c/fields/Surety_Completion_Details__c.field-meta.xml
<CustomField>
    <fullName>Surety_Completion_Details__c</fullName>
    <label>Surety Completion Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>