force-app/main/default/objects/Partner_Application__c/fields/Suspended_Debarred_Details__c.field-meta.xml
<CustomField>
    <fullName>Suspended_Debarred_Details__c</fullName>
    <label>Suspended/Debarred Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>