force-app/main/default/objects/Partner_Application__c/fields/Token_expires_at__c.field-meta.xml
<CustomField>
    <fullName>Token_expires_at__c</fullName>
    <label>Token expires at</label>
    <type>DateTime</type>
</CustomField>