force-app/main/default/objects/Partner_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Primary_Address__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Related_Entities__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>