force-app/main/default/objects/Partner_Application__c/listViews/Approved.listView-meta.xml
<ListView>
    <fullName>Approved</fullName>
    <columns>NAME</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Bankruptcy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved</label>
</ListView>