force-app/main/default/objects/Partner_Application__c/listViews/Draft.listView-meta.xml
<ListView>
    <fullName>Draft</fullName>
    <columns>NAME</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Primary_Address__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Related_Entities__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft</label>
</ListView>